Update and rename homepage.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>sylwia_lic_portfolio</title>
-		<link rel="stylesheet" href="css/homepage.css">
+		<link rel="stylesheet" href="css/index.css">
 </head>
 	
 <!--the following code displays on the website --> 
