--- a/creative_suite/creative_suite.html
+++ b/creative_suite/creative_suite.html
@@ -14,7 +14,7 @@
 	
 	<nav>
 		<div id="nav_links">
-			<a class="hyperlink_spacing" href="../homepage.html">Homepage</a>
+			<a class="hyperlink_spacing" href="../index.html">Homepage</a>
 			<a class="hyperlink_spacing" href="../photo_showcase/photo_showcase.html"> Photo Showcase</a>
 			<a class="hyperlink_spacing" href="../resume/resume.html">Resume</a>
 		</div>
