--- a/photo_showcase/photo_showcase.html
+++ b/photo_showcase/photo_showcase.html
@@ -14,7 +14,7 @@
 	
 			<nav>
 				<div id="nav_links">
-					<a class="hyperlink_spacing" href="../homepage.html">Homepage</a>
+					<a class="hyperlink_spacing" href="../index.html">Homepage</a>
 					<a class="hyperlink_spacing" href="../creative_suite/creative_suite.html"> Creative Suite Works</a>
 					<a class="hyperlink_spacing" href="../resume/resume.html">Resume</a>
 				</div>
