--- a/resume/resume.html
+++ b/resume/resume.html
@@ -15,7 +15,7 @@
 	
 		<nav>
 			<div id="nav_links">
-				<a class="hyperlink_spacing" href="../homepage.html">Homepage</a>
+				<a class="hyperlink_spacing" href="../index.html">Homepage</a>
 				<a class="hyperlink_spacing" href="../creative_suite/creative_suite.html"> Creative Suite Works</a>
 				<a class="hyperlink_spacing" href="../photo_showcase/photo_showcase.html"> Photo Showcase</a>
 			</div>
