--- a/resume/resume.html
+++ b/resume/resume.html
@@ -41,7 +41,7 @@
 				Expected Graduation: May 2024 	 
 				</p>
 			<h2>Select Experience</h2>
-				<h3> Self-employed, January 2022 - Present, <span style="font-style:italic">Home Care Aide</span> </h3>
+				<h3> Self-employed, January 2022 - December 2023, <span style="font-style:italic">Home Care Aide</span> </h3>
 					<ul>
 						<li>Assisted with taking care of 2 elderly patients with disabilities </li>
 					</ul>
