--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
 		</section>
 		<!--2nd section - content-->	
 		<section id="content"> 
-			<h2>Welcome to my site!</h2>
+			<h2>Welcome to my final project for my HTML/CSS class in Fall 2023!</h2>
 			<p>Hello! Nice to meet you! I hope we can get to know each other. I'll start, if you don't mind, since you seem interested. 
 			<br> <br>	
-			I have varied interests, and look forward to applying what I learn to new experiences, as well as gathering even more knowledge to apply. I like nature and interesting media. I like to read both fiction and nonfiction, particularly anything related to finance. I am trying to get into the field of SEO, and am learning about that, and working on getting certifications. I am also learning how to make websites from scratch using HTML and CSS - this is my first public website!
+			I am trying to get into the field of SEO, and am learning about that, and working on getting certifications. I am also learning how to make websites from scratch using HTML and CSS - this is my first public website!
 			<br> <br>
-			If you see anything in common or interesting you want to discuss with me, please let me know! I am open to making new connections. Just click the 'Contact Me' link at the bottom of the page.</p>
+			Here is what the professor wanted for this project:
+			<br>
+			Core website requirements 
+				
+			</p>
 		</section>
 		<!--last section - logo-->
 		<section id="logo"> 
