--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
 			Here is what the professor wanted for this project:
 			<br>
 			Core website requirements 
-				
+				<ul>
+					<li>min 4 pages </li>
+					<li>directory structure </li>
+					<li>made with HTML and formatted with CSS only  </li>
+					<li>use design concepts taught in class  </li>
+					<li>properly structured using semantic HTML tags and uses other HTML tags according to their semantic purpose </li>
+					<li>pages incorporate advanced concepts like box model and positioning  </li>
+					<li>pages use responsive design concepts and relative measurements  </li>
+					<li>pages use all of the following elements: container, logo, navigation, content, footer, and white space  </li>
+				</ul>
 			</p>
 		</section>
 		<!--last section - logo-->
