--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <br>		
 	<footer>
 		<div id="footer_links">
-			<a href="mailto:slic14@temple.edu">Contact Me</a>
+			<a href="mailto:slic@temple.edu">Contact Me</a>
 		</div>
 	
 		<div id="copyright">
