--- a/creative_suite/creative_suite.html
+++ b/creative_suite/creative_suite.html
@@ -56,7 +56,7 @@
 <!--footer-->	
 	<footer>
 		<div id="footer_links">
-			<a href="mailto:slic14@temple.edu"> Contact Me</a>
+			<a href="mailto:slic@temple.edu"> Contact Me</a>
 		</div>
 	
 		<div id="copyright">
