--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<br> <br>
 			Here is what the professor wanted for this project:
 				<ul>
-					<li>min 4 pages </li>
+					<li>a functioning site with 4 pages </li>
 					<li>directory structure </li>
 					<li>made with HTML and formatted with CSS only  </li>
 					<li>use design concepts taught in class  </li>
